Fixed keyboard navigation in the Move To modal dialog in Clippings Manager
(part of issue #369)

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -1362,6 +1362,14 @@ body[data-locale="uk"] #include-src-urls + label {
     top: 24px;
 }
 
+#move-dlg #activate-move-to-fldr-tree {
+    opacity: 0;
+    width: 0;
+    height: 0;
+    border: 0;
+    padding: 0;
+}
+
 #move-dlg #move-to-fldr-tree {
     margin-top: 4px;
     margin-bottom: 8px;
